docs: Update academic institution names, timeline dates, project descriptions, and correct meta description in `index.html`.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Krishna Madhur Akella — Nanotechnology &amp; Semiconductor Research</title>
-  <meta name="description" content="PhD-track researcher in nanotechnology, ferroelectric devices, MEMS fabrication, and analog IC design. MSE Electrical Engineering at the University of Pennsylvania." />
+  <meta name="description"
+    content="PhD-track researcher in nanotechnology, ferroelectric devices, MEMS fabrication, and analog IC design. MSE Electrical Engineering at the University of Pennsylvania." />
   <meta name="author" content="Krishna Madhur Akella" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
 
   <!-- ====== NAVIGATION ====== -->
@@ -65,11 +68,11 @@
         non-volatile memory and fabricating quantum devices at the
         <strong>Singh Center for Nanotechnology</strong>.
       </p>
-      <br/>
+      <br />
       <p class="about-text">
         Prior to Penn, I spent two years as a hardware engineer at <strong>Silicon Laboratories</strong> designing
         mixed-signal evaluation boards, and interned at <strong>Cadence Design Systems</strong> working on
-        sub-3nm device modelling. I am actively preparing for PhD applications in electrical engineering,
+        3nm device modelling. I am actively preparing for PhD applications in electrical engineering,
         with a focus on semiconductor device research.
       </p>
     </div>
@@ -89,8 +92,8 @@
           <ul class="edu-details">
             <li>Concentration: Nanotechnology &amp; Semiconductors</li>
             <li>Additional Focus: Mixed Signal &amp; RFIC Design</li>
-            <li>Coursework: Analog IC Design, Digital IC Design, Nanoscale Science &amp; Engineering, Semiconductor Memory Devices, Nanofabrication &amp; Nanocharacterization, MEMS &amp; NEMS</li>
-            <li>GPA: 3.4 / 4.0</li>
+            <li>Coursework: Analog IC Design, Digital IC Design, Nanoscale Science &amp; Engineering, Semiconductor
+              Memory Devices, Nanofabrication &amp; Nanocharacterization, MEMS &amp; NEMS</li>
           </ul>
         </div>
         <div class="edu-meta">
@@ -101,11 +104,11 @@
 
       <div class="edu-card">
         <div class="edu-main">
-          <h3 class="edu-school">Shiv Nadar University</h3>
+          <h3 class="edu-school">Shiv Nadar Institution of Eminence</h3>
           <p class="edu-degree">Bachelor of Technology — Electronics &amp; Communication Engineering</p>
           <ul class="edu-details">
+            <li>Formerly Shiv Nadar University</li>
             <li>Specialization: Microelectronics</li>
-            <li>GPA: 3.41 / 4.0</li>
           </ul>
         </div>
         <div class="edu-meta">
@@ -132,10 +135,14 @@
           </div>
           <p class="research-tools">Synopsys Sentaurus TCAD · Keithley SCS-4200</p>
           <ul>
-            <li>Modelling AlScN-based FE-FETs in Synopsys Sentaurus TCAD, replacing standard gate oxides with ferroelectric stacks to match real-life wafer configurations.</li>
-            <li>Analyzing Energy Band diagrams (E<sub>c</sub> and E<sub>v</sub>) and polarization dynamics to tune ON-OFF voltages and scale channel lengths for cleanroom fabrication feasibility.</li>
-            <li>Characterizing cylindrical AlScN ferroelectric memory arrays using Keithley SCS-4200 Parameter Analyzer.</li>
-            <li>Extracting PUND pulse measurements and DC-IV curves across varying device dimensions to evaluate switching reliability and scalability.</li>
+            <li>Modelling AlScN-based FE-FETs in Synopsys Sentaurus TCAD, replacing gate oxides with ferroelectric
+              stacks and matching it with real-life wafer configurations.</li>
+            <li>Analyzing Energy Band diagrams (E<sub>c</sub> and E<sub>v</sub>) and polarization dynamics to tune
+              ON-OFF voltages and scale channel lengths for cleanroom fabrication feasibility.</li>
+            <li>Characterizing cylindrical AlScN ferroelectric memory arrays using Keithley SCS-4200 Parameter Analyzer.
+            </li>
+            <li>Extracting PUND pulse measurements and DC-IV curves across varying device dimensions to evaluate
+              switching reliability and scalability.</li>
           </ul>
         </div>
 
@@ -146,9 +153,12 @@
           </div>
           <p class="research-tools">Singh Center for Nanotechnology · Photolithography · DRIE · SEM · AFM · TEM</p>
           <ul>
-            <li>Fabricated MEMS Cantilever Beams and Comb Drive Arrays using photolithography, DRIE, and wet etching.</li>
-            <li>Performing device characterization utilizing SEM, AFM, TEM, and Profilometry to analyze etch profiles.</li>
-            <li>Developing process flows for the fabrication of Graphene Field-Effect Transistors (GFETs) and synthesis of CdSe Quantum Dots.</li>
+            <li>Fabricated MEMS Cantilever Beams and Comb Drive Arrays using photolithography, DRIE, and wet etching.
+            </li>
+            <li>Performing device characterization utilizing SEM, AFM, TEM, and Profilometry to analyze etch profiles.
+            </li>
+            <li>Developing process flows for the fabrication of Graphene Field-Effect Transistors (GFETs) and synthesis
+              of CdSe Quantum Dots.</li>
           </ul>
         </div>
 
@@ -161,7 +171,8 @@
           <ul>
             <li>Modelled planar 2D SOI-FET and 3D 14nm FinFET, achieving 3% performance improvement over baseline.</li>
             <li>Simulated tunneling effects and applied advanced mobility models to validate device physics.</li>
-            <li>Awarded "Research Grade: Excellent" at the Opportunities for Undergraduate Research (OUR) Conference.</li>
+            <li>Awarded "Research Grade: Excellent" at the Opportunities for Undergraduate Research (OUR) Conference.
+            </li>
           </ul>
         </div>
 
@@ -181,13 +192,15 @@
         <div class="timeline-item">
           <div class="timeline-header">
             <h3 class="timeline-company">University of Pennsylvania</h3>
-            <span class="timeline-date">Jan 2026 – Present</span>
+            <span class="timeline-date">Dec 2025 – Present</span>
           </div>
           <p class="timeline-role">ESE Laboratories Staff Member</p>
           <p class="timeline-location">Philadelphia, PA</p>
           <ul>
-            <li>Manage and calibrate high-precision electronic instrumentation (Keithley, Agilent) for ESE research labs.</li>
-            <li>Provide technical support for analog component selection and circuit debugging during active lab sessions.</li>
+            <li>Manage and calibrate high-precision electronic instrumentation (Keithley, Agilent) for ESE research
+              labs.</li>
+            <li>Provide technical support for analog component selection and circuit debugging during active lab
+              sessions.</li>
             <li>Maintain inventory and procure critical components for wide-bandgap and RF characterization setups.</li>
           </ul>
         </div>
@@ -200,11 +213,16 @@
           <p class="timeline-role">Associate Hardware Engineer</p>
           <p class="timeline-location">Hyderabad, India</p>
           <ul>
-            <li>Designed 21 mixed-signal evaluation boards featuring 32-bit &amp; 8-bit Silicon Labs MCUs, focusing on RF layout optimization and minimizing switching noise in high-speed digital blocks.</li>
-            <li>Designed two development boards currently utilized as standard coursework platforms for ESE 5160 IoT Edge Scaling at the University of Pennsylvania.</li>
-            <li>Led a team of 6 engineers to test and validate 115 units of production-build FPGA setups, including proFPGA motherboards and custom RF-AFE breakout boards.</li>
-            <li>Instrumental in the first-time-right (FTR) design and validation of a USB-to-UART bridge converter board with robust Signal Integrity (SI).</li>
-            <li>Collaborated with firmware and validation teams to define board requirements and debugging interfaces, streamlining the post-silicon validation flow.</li>
+            <li>Designed 21 mixed-signal evaluation boards featuring 32-bit &amp; 8-bit Silicon Labs MCUs, focusing on
+              RF layout optimization and minimizing switching noise in high-speed digital blocks.</li>
+            <li>Designed two development boards currently utilized as standard coursework platforms for ESE 5160 IoT
+              Edge Scaling at the University of Pennsylvania.</li>
+            <li>Led a team of 6 engineers to test and validate 115 units of production-build FPGA setups, including
+              proFPGA motherboards and custom RF-AFE breakout boards.</li>
+            <li>Instrumental in the first-time-right (FTR) design and validation of a USB-to-UART bridge converter board
+              with robust Signal Integrity (SI).</li>
+            <li>Collaborated with firmware and validation teams to define board requirements and debugging interfaces,
+              streamlining the post-silicon validation flow.</li>
             <li>Adhered strictly to IPC standards for PCB design, ensuring manufacturability and reliability.</li>
           </ul>
         </div>
@@ -217,8 +235,10 @@
           <p class="timeline-role">Hardware Engineering Intern</p>
           <p class="timeline-location">Hyderabad, India</p>
           <ul>
-            <li>Created schematics for a universal sensor board and aided in preliminary testing of customer-facing evaluation boards using Altium NEXUS.</li>
-            <li>Performed rigorous component library management and layout reviews to ensure zero-defect fabrication hand-offs.</li>
+            <li>Created schematics for a universal sensor board and aided in preliminary testing of customer-facing
+              evaluation boards using Altium NEXUS.</li>
+            <li>Performed rigorous component library management and layout reviews to ensure zero-defect fabrication
+              hand-offs.</li>
           </ul>
         </div>
 
@@ -230,9 +250,10 @@
           <p class="timeline-role">Hardware Engineering Intern</p>
           <p class="timeline-location">Bangalore, India</p>
           <ul>
-            <li>Analyzed DDR SDRAM and SerDes schematics in the Memory Interface Group (MIG) using Cadence SerDes PHY.</li>
+            <li>Analyzed DDR SDRAM and SerDes schematics in the Memory Interface Group (MIG) using Cadence SerDes PHY.
+            </li>
             <li>Performed chip layout, schematic design, device optimization, and simulation on Cadence Virtuoso.</li>
-            <li>Focused on 3nm technology nodes, characterizing LVTH MOSFET performance.</li>
+            <li>Worked on 3nm technology node, characterizing Low Threshold Voltage (LVTH) MOSFET performance.</li>
           </ul>
         </div>
 
@@ -250,10 +271,12 @@
       <div class="projects-grid">
 
         <div class="project-card">
-          <h3>Wideband Transimpedance Amplifier for Optical Receivers</h3>
+          <h3><a href="#" class="project-title-link" data-report="reports/tia_report.pdf">Wideband Transimpedance
+              Amplifier for Optical Receivers</a></h3>
           <p class="project-tools">Cadence Virtuoso · 45nm · Fall 2025</p>
           <ul>
-            <li>8-stage cascaded TIA achieving <span class="project-highlight">519 kΩ (114 dBΩ)</span> gain, exceeding spec by 3.5×.</li>
+            <li>8-stage cascaded TIA achieving <span class="project-highlight">519 kΩ (114 dBΩ)</span> gain, exceeding
+              spec by 3.5×.</li>
             <li>Maintained <span class="project-highlight">311 MHz</span> bandwidth with a 600Ω differential load.</li>
             <li>"Direct Coupling" strategy with tapered loading to eliminate AC coupling.</li>
             <li>Power consumption: <span class="project-highlight">3.5 mW</span> (well below 10 mW budget).</li>
@@ -261,10 +284,12 @@
         </div>
 
         <div class="project-card">
-          <h3>Low-Power 16×4 SRAM Array Design</h3>
+          <h3><a href="#" class="project-title-link" data-report="reports/sram_report.pdf">Low-Power 16×4 SRAM Array
+              Design</a></h3>
           <p class="project-tools">Cadence Virtuoso · 45nm CMOS · Fall 2025</p>
           <ul>
-            <li>Synchronous SRAM macro: <span class="project-highlight">249 ps (~4 GHz)</span> worst-case write access time.</li>
+            <li>Synchronous SRAM macro: <span class="project-highlight">249 ps (~4 GHz)</span> worst-case write access
+              time.</li>
             <li>Robust 6T bitcell with Cell Ratio of 1.5, eliminating read-disturb failures.</li>
             <li>Optimized Area-Power-Delay FOM improvement by <span class="project-highlight">46%</span>.</li>
             <li>Compact layout: <span class="project-highlight">2.42 µm²</span>, 356 µW active power at 1.2V.</li>
@@ -272,7 +297,8 @@
         </div>
 
         <div class="project-card">
-          <h3>Universal Sensor Board Design</h3>
+          <h3><a href="#" class="project-title-link" data-report="reports/sensor_board_report.pdf">Universal Sensor
+              Board Design</a></h3>
           <p class="project-tools">Altium NEXUS · Spring 2023</p>
           <ul>
             <li>Modular 3-PCB system hosting MCU, power management, and peripherals.</li>
@@ -405,7 +431,8 @@
         <div class="leadership-item">
           <div>
             <h3 class="leadership-title">Certifications</h3>
-            <p class="leadership-org">Introduction to Embedded System Design (NPTEL) · Advances in Freeform Electronics (Yonsei University)</p>
+            <p class="leadership-org">Introduction to Embedded System Design (NPTEL) · Advances in Freeform Electronics
+              (Yonsei University)</p>
           </div>
           <span class="leadership-date">—</span>
         </div>
@@ -423,12 +450,9 @@
 
       <div class="contact-grid">
         <a href="mailto:krishna8@seas.upenn.edu" class="contact-link">✉ krishna8@seas.upenn.edu</a>
-        <a href="https://linkedin.com/in/akrishnamadhur" target="_blank" rel="noopener" class="contact-link">LinkedIn</a>
+        <a href="https://linkedin.com/in/akrishnamadhur" target="_blank" rel="noopener"
+          class="contact-link">LinkedIn</a>
         <a href="https://github.com/KrishnaMadhur" target="_blank" rel="noopener" class="contact-link">GitHub</a>
-      </div>
-
-      <div class="contact-resume">
-        <a href="AKM_Industry_Resume.pdf" download>↓ Download Resume</a>
       </div>
     </div>
   </section>
@@ -438,6 +462,16 @@
     <p>&copy; 2026 Krishna Madhur Akella. All rights reserved.</p>
   </footer>
 
+  <!-- PDF Preview Modal -->
+  <div id="pdf-modal" class="pdf-modal" style="display:none;">
+    <div class="pdf-modal-overlay"></div>
+    <div class="pdf-modal-content">
+      <button class="pdf-modal-close" aria-label="Close">&times;</button>
+      <iframe id="pdf-viewer" src="" title="Report Preview"></iframe>
+    </div>
+  </div>
+
   <script src="js/main.js"></script>
 </body>
+
 </html>
