update: content corrections, MEMS project card, PDF preview modal, remove resume download

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="projects-grid">
 
         <div class="project-card">
-          <h3><a href="#" class="project-title-link" data-report="reports/tia_report.pdf">Wideband Transimpedance
+          <h3><a href="#" class="project-title-link" data-report="reports/TIA-Report_AKM.pdf">Wideband Transimpedance
               Amplifier for Optical Receivers</a></h3>
           <p class="project-tools">Cadence Virtuoso · 45nm · Fall 2025</p>
           <ul>
@@ -284,8 +284,7 @@
         </div>
 
         <div class="project-card">
-          <h3><a href="#" class="project-title-link" data-report="reports/sram_report.pdf">Low-Power 16×4 SRAM Array
-              Design</a></h3>
+          <h3>Low-Power 16×4 SRAM Array Design</h3>
           <p class="project-tools">Cadence Virtuoso · 45nm CMOS · Fall 2025</p>
           <ul>
             <li>Synchronous SRAM macro: <span class="project-highlight">249 ps (~4 GHz)</span> worst-case write access
@@ -297,13 +296,23 @@
         </div>
 
         <div class="project-card">
-          <h3><a href="#" class="project-title-link" data-report="reports/sensor_board_report.pdf">Universal Sensor
-              Board Design</a></h3>
+          <h3>Universal Sensor Board Design</h3>
           <p class="project-tools">Altium NEXUS · Spring 2023</p>
           <ul>
             <li>Modular 3-PCB system hosting MCU, power management, and peripherals.</li>
             <li>Schematics for 4 memory elements, 7 sensors, and 5 GPIO headers.</li>
             <li>Layout optimized for signal integrity.</li>
+          </ul>
+        </div>
+
+        <div class="project-card">
+          <h3><a href="#" class="project-title-link" data-report="reports/ESE5360_MEMS Draft Report.pdf">MEMS Cantilever
+              Beams &amp; Comb Drive Arrays</a></h3>
+          <p class="project-tools">Singh Center for Nanotechnology · Photolithography · DRIE · Spring 2026</p>
+          <ul>
+            <li>Fabricated cantilever beams and comb drive arrays using photolithography, DRIE, and wet etching.</li>
+            <li>Device characterization via SEM, AFM, TEM, and Profilometry to analyze etch profiles.</li>
+            <li>Developing process flows for GFET fabrication and CdSe Quantum Dot synthesis.</li>
           </ul>
         </div>
 
