polish: dark writing tab, radial home gradient, dot-grid projects, Krishna. logo, current focus section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- ====== GLASSMORPHISM NAVIGATION ====== -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="#home" class="nav-logo" onclick="event.preventDefault();">KMA</a>
+      <a href="#home" class="nav-logo" onclick="event.preventDefault();">Krishna.</a>
       <div class="nav-tabs">
         <button class="nav-tab active" data-view="home">Home</button>
         <button class="nav-tab" data-view="projects">Projects</button>
@@ -75,6 +75,13 @@
             <span class="sw-arrow">→</span>
           </div>
         </div>
+
+        <p class="home-section-label float-up">Current Focus</p>
+        <p class="home-bio float-up" style="margin-bottom: 3.5rem;">
+          Currently characterizing AlScN ferroelectric devices at the <strong>Singh Center for Nanotechnology</strong>
+          and developing process flows for GFET fabrication. Reading <em>The Art of Electronics</em> by Horowitz &amp;
+          Hill.
+        </p>
 
         <p class="home-section-label float-up">Contact</p>
         <div class="home-links float-up">
