feat: ENIG gold dots + flashlight hover, notebook margin, CV readability, logo grounding pulse

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- ====== GLASSMORPHISM NAVIGATION ====== -->
   <nav class="navbar">
     <div class="nav-container">
-      <a href="#home" class="nav-logo" onclick="event.preventDefault();">कृष्ण ⏚</a>
+      <a href="#home" class="nav-logo" id="nav-logo">कृष्ण <span class="logo-ground">⏚</span></a>
       <div class="nav-tabs">
         <button class="nav-tab active" data-view="home">Home</button>
         <button class="nav-tab" data-view="projects">Projects</button>
