feat: footer credit with Sasank link, bio edit, expanded push guide in instructions

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           My research focuses on <strong>AlScN ferroelectric memory devices</strong> and <strong>MEMS/NEMS
             fabrication</strong>
           at the Singh Center for Nanotechnology. Previously, I designed mixed-signal evaluation boards
-          at <strong>Silicon Laboratories</strong> and worked on 3nm device modelling at <strong>Cadence Design
+          at <strong>Silicon Laboratories</strong> and worked on SerDes schematics at <strong>Cadence Design
             Systems</strong>.
         </p>
 
@@ -557,7 +557,8 @@
 
   <!-- ====== FOOTER ====== -->
   <footer class="footer">
-    <p>&copy; 2026 Krishna Madhur Akella</p>
+    <p>&copy; 2026 Krishna Madhur Akella · Built with <a href="https://www.gssasank.com" target="_blank" rel="noopener"
+        class="footer-credit">Sasank</a></p>
   </footer>
 
   <!-- ====== PDF Preview Modal ====== -->
