update: Edited Sasank's webpage link

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
   <!-- ====== FOOTER ====== -->
   <footer class="footer">
-    <p>&copy; 2026 Krishna Madhur Akella · Built with <a href="https://www.gssasank.com" target="_blank" rel="noopener"
+    <p>&copy; 2026 Krishna Madhur Akella · Built with <a href="https://gssasank.com" target="_blank" rel="noopener"
         class="footer-credit">Sasank</a></p>
   </footer>
 
