--- a/index.html
+++ b/index.html
@@ -213,6 +213,52 @@
           <p class="writing-card-date">2026</p>
         </a>
       </div>
+
+      <!-- The Bookshelf -->
+      <div class="bookshelf float-up">
+        <h2 class="bookshelf-title">The Bookshelf</h2>
+        <p class="bookshelf-subtitle">What I'm reading, dissecting, and drawing from.</p>
+
+        <p class="bookshelf-category">Textbooks</p>
+        <ul class="bookshelf-list">
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">Semiconductor Physics and Devices</span>
+            <span class="bookshelf-item-author">Donald A. Neamen</span>
+          </li>
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">CMOS VLSI Design: A Circuits and Systems Perspective</span>
+            <span class="bookshelf-item-author">Weste & Harris</span>
+          </li>
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">Fundamentals of Microelectronics</span>
+            <span class="bookshelf-item-author">Behzad Razavi</span>
+          </li>
+        </ul>
+
+        <p class="bookshelf-category">Research Papers</p>
+        <ul class="bookshelf-list">
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">Ferroelectric Al₁₋ₓScₓN for Future Nanoelectronics</span>
+            <span class="bookshelf-item-author">IEEE TED, 2023</span>
+          </li>
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">MEMS Resonators: A Review</span>
+            <span class="bookshelf-item-author">J. MEMS, 2022</span>
+          </li>
+        </ul>
+
+        <p class="bookshelf-category">Engineering & Beyond</p>
+        <ul class="bookshelf-list">
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">How to Build a Car</span>
+            <span class="bookshelf-item-author">Adrian Newey</span>
+          </li>
+          <li class="bookshelf-item">
+            <span class="bookshelf-item-title">The Design of Everyday Things</span>
+            <span class="bookshelf-item-author">Don Norman</span>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 
@@ -557,8 +603,10 @@
 
   <!-- ====== FOOTER ====== -->
   <footer class="footer">
-    <p>&copy; 2026 Krishna Madhur Akella · Built with <a href="https://gssasank.com" target="_blank" rel="noopener"
-        class="footer-credit">Sasank</a></p>
+    <p>&copy; 2026 Krishna Madhur Akella · Philadelphia, PA · Built with <a href="https://gssasank.com" target="_blank"
+        rel="noopener" class="footer-credit">Sasank</a> · <a
+        href="https://open.spotify.com/playlist/37i9dQZF1DWZeKCadgRdKQ" target="_blank" rel="noopener"
+        class="footer-spotify" title="Deep Focus">♫</a></p>
   </footer>
 
   <!-- ====== PDF Preview Modal ====== -->
