style: Journal visual polish — timeline years, verdict tags, film grain noise, vignette, improved typography

--- a/index.html
+++ b/index.html
@@ -217,56 +217,59 @@
 
         <p class="journal-category">Textbooks</p>
         <div class="journal-entry">
-          <span class="journal-meta">In Progress</span>
+          <span class="journal-meta">2026</span>
           <span class="journal-content">
             <span class="journal-entry-title">Semiconductor Physics and Devices</span>
-            <span class="journal-entry-author">Donald A. Neamen</span>
+            <span class="journal-entry-author">Donald A. Neamen · <span
+                class="journal-verdict">[Reference]</span></span>
           </span>
         </div>
         <div class="journal-entry">
-          <span class="journal-meta">In Progress</span>
+          <span class="journal-meta">2025</span>
           <span class="journal-content">
             <span class="journal-entry-title">CMOS VLSI Design: A Circuits and Systems Perspective</span>
-            <span class="journal-entry-author">Weste &amp; Harris</span>
+            <span class="journal-entry-author">Weste &amp; Harris · <span class="journal-verdict">[Essential
+                Reading]</span></span>
           </span>
         </div>
         <div class="journal-entry">
-          <span class="journal-meta">In Progress</span>
+          <span class="journal-meta">2025</span>
           <span class="journal-content">
             <span class="journal-entry-title">Fundamentals of Microelectronics</span>
-            <span class="journal-entry-author">Behzad Razavi</span>
+            <span class="journal-entry-author">Behzad Razavi · <span class="journal-verdict">[Must Read]</span></span>
           </span>
         </div>
 
         <p class="journal-category">Research Papers</p>
         <div class="journal-entry">
-          <span class="journal-meta">IEEE TED</span>
+          <span class="journal-meta">2023</span>
           <span class="journal-content">
             <span class="journal-entry-title">Ferroelectric Al₁₋ₓScₓN for Future Nanoelectronics</span>
-            <span class="journal-entry-author">2023</span>
+            <span class="journal-entry-author">IEEE TED · <span class="journal-verdict">[Reference]</span></span>
           </span>
         </div>
         <div class="journal-entry">
-          <span class="journal-meta">J. MEMS</span>
+          <span class="journal-meta">2022</span>
           <span class="journal-content">
             <span class="journal-entry-title">MEMS Resonators: A Review</span>
-            <span class="journal-entry-author">2022</span>
+            <span class="journal-entry-author">J. MEMS · <span class="journal-verdict">[Reference]</span></span>
           </span>
         </div>
 
         <p class="journal-category">Engineering &amp; Beyond</p>
         <div class="journal-entry">
-          <span class="journal-meta">Read</span>
+          <span class="journal-meta">2024</span>
           <span class="journal-content">
             <span class="journal-entry-title">How to Build a Car</span>
-            <span class="journal-entry-author">Adrian Newey</span>
+            <span class="journal-entry-author">Adrian Newey · <span class="journal-verdict">[Must Read]</span></span>
           </span>
         </div>
         <div class="journal-entry">
-          <span class="journal-meta">Read</span>
+          <span class="journal-meta">2024</span>
           <span class="journal-content">
             <span class="journal-entry-title">The Design of Everyday Things</span>
-            <span class="journal-entry-author">Don Norman</span>
+            <span class="journal-entry-author">Don Norman · <span class="journal-verdict">[Essential
+                Reading]</span></span>
           </span>
         </div>
       </div>
